# STEAKProtocol

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
steak_protocol/: build.py  create_key_pair.py  submit_ref_script.py
steak_protocol/offchain/: util.py
steak_protocol/offchain/airdrop/: close.py  init.py  redeem.py
steak_protocol/offchain/stakechain/: init.py  mine.py  register_upgrade.py  register_upgrade_script.py  upgrade.py  upgrade_proposal_v0_to_v0a.py  upgrade_proposal_v0_to_v1.py  upgrade_proposal_v0a_to_v1.py  upgrade_v0_to_v0a.py  upgrade_v0a_to_v1.py
steak_protocol/offchain/stakeholder/: deregister.py  init.py
steak_protocol/offchain/stakepool/: cancel_request.py  fill_requests.py  init.py  init_stake_key.py  place_request.py  register_pool_script.py
steak_protocol/onchain/: airdrop.py  one_shot_nft.py  stakecoin.py  types.py  util.py
steak_protocol/onchain/stakechain/: stakechain.py  stakechain_auth_nft.py  stakechain_upgrade.py  stakechain_upgrade_v0.py  stakechain_upgrade_v0a.py  stakechain_upgrade_v1.py  stakechain_v0.py  stakechain_v1.py
steak_protocol/onchain/stakeholder/: stakeholder.py  stakeholder_auth_nft.py
steak_protocol/onchain/stakepool/: stakepool.py  stakepool_request.py
steak_protocol/onchain/utils/: ext_interval.py  random.py  value.py
steak_protocol/utils/: __init__.py  contracts.py  from_script_context.py  keys.py  network.py  to_script_context.py
test/offchain/: util.py
test/offchain/stakechain/: test_init.py  test_mine.py  test_upgrade.py
test/onchain/: test_interval.py  test_util.py
(+1 files in other folders)
